generify the csp classes